Use List.getLast() in DataListenerAdapter
We do not need to open-code access to last element, just use getLast().

Change-Id: I2ee1c9ef918afd6cadfeb339a80332f1afeebea0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>